--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Meals For Your Ingredients</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel ="stylesheet" href = "style.css"
 </head>
 <body>
+    <div class ="container">
+        <div class="meal-wrapper">
+            <div class ="meal-search">
+                <h2 class = "title">Find Meals For Your Ingredients</h2>
+                <blockquote>Real food doesn't have ingredients, real food is ingredients. <br><cite>- Jamie Oliver</cite></blockquote>
+
+                <div class="meal-search-box">
+                    <input type="text" class ="search-content" placeholder="Enter an ingredient" id="search-input">
+                    <button type="submit" class = "search-btn btn" id = "search-btn"><i class = "fas fa-search"></i></button>
+                </div><!-- END OF MEAL-SEARCH-BOX-->
+            </div><!-- END OF MEAL-SEARCH-->
+            <div class="meal-result">
+                <h2 class="title"> Your Search Rsults:</h2>
+                <div class="meal-item">
+                    <div class="meal-img">
+                        <img src="food.jpg" alt = "food">
+                    </div>
+                    <div class="meal-name">
+                        <h3>Potato Chips</h3>
+                        <a href ="#" class="recipe-btn">Get Recipe</a>
+                    </div>
+                </div>
+            </div><!-- END OF MEAL-RESULT-->
+        </div><!-- END OF MEAL-WRAPPER-->
+    </div><!-- END OF CONTAINER -->
     <script src="script.js"></script>
 </body>
 </html>
