--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="title"> Your Search Rsults:</h2>
                 <div class="meal-item">
                     <div class="meal-img">
-                        <img src="food.jpg" alt = "food">
+                        <img src="img/food.jpg" alt = "food">
                     </div>
                     <div class="meal-name">
                         <h3>Potato Chips</h3>
