--- a/index.html
+++ b/index.html
@@ -16,21 +16,47 @@
                 <blockquote>Real food doesn't have ingredients, real food is ingredients. <br><cite>- Jamie Oliver</cite></blockquote>
 
                 <div class="meal-search-box">
-                    <input type="text" class ="search-content" placeholder="Enter an ingredient" id="search-input">
+                    <input type="text" class ="search-control" placeholder="Enter an ingredient" id="search-input">
                     <button type="submit" class = "search-btn btn" id = "search-btn"><i class = "fas fa-search"></i></button>
                 </div><!-- END OF MEAL-SEARCH-BOX-->
             </div><!-- END OF MEAL-SEARCH-->
             <div class="meal-result">
                 <h2 class="title"> Your Search Rsults:</h2>
-                <div class="meal-item">
-                    <div class="meal-img">
-                        <img src="img/food.jpg" alt = "food">
+                <div id="meal">
+                    <!-- meal-item-->
+                    <div class="meal-item">
+                        <div class="meal-img">
+                            <img src="img/food.jpg" alt = "food">
+                        </div>
+                        <div class="meal-name">
+                            <h3>Potato Chips</h3>
+                            <a href ="#" class="recipe-btn">Get Recipe</a>
+                        </div>
                     </div>
-                    <div class="meal-name">
-                        <h3>Potato Chips</h3>
-                        <a href ="#" class="recipe-btn">Get Recipe</a>
+                    <!-- END OF MEAL ITEM-->
+                    <!-- meal-item-->
+                    <div class="meal-item">
+                        <div class="meal-img">
+                            <img src="img/food.jpg" alt = "food">
+                        </div>
+                        <div class="meal-name">
+                            <h3>Potato Chips</h3>
+                            <a href ="#" class="recipe-btn">Get Recipe</a>
+                        </div>
                     </div>
-                </div>
+                    <!-- END OF MEAL ITEM-->
+                    <!-- meal-item-->
+                    <div class="meal-item">
+                        <div class="meal-img">
+                            <img src="img/food.jpg" alt = "food">
+                        </div>
+                        <div class="meal-name">
+                            <h3>Potato Chips</h3>
+                            <a href ="#" class="recipe-btn">Get Recipe</a>
+                        </div>
+                    </div>
+                    <!-- END OF MEAL ITEM-->
+                </div><!-- END OF ID MEAL-->
             </div><!-- END OF MEAL-RESULT-->
         </div><!-- END OF MEAL-WRAPPER-->
     </div><!-- END OF CONTAINER -->
