--- a/index.html
+++ b/index.html
@@ -34,30 +34,28 @@
                         </div>
                     </div>
                     <!-- END OF MEAL ITEM-->
-                    <!-- meal-item-->
-                    <div class="meal-item">
-                        <div class="meal-img">
-                            <img src="img/food.jpg" alt = "food">
-                        </div>
-                        <div class="meal-name">
-                            <h3>Potato Chips</h3>
-                            <a href ="#" class="recipe-btn">Get Recipe</a>
-                        </div>
-                    </div>
-                    <!-- END OF MEAL ITEM-->
-                    <!-- meal-item-->
-                    <div class="meal-item">
-                        <div class="meal-img">
-                            <img src="img/food.jpg" alt = "food">
-                        </div>
-                        <div class="meal-name">
-                            <h3>Potato Chips</h3>
-                            <a href ="#" class="recipe-btn">Get Recipe</a>
-                        </div>
-                    </div>
-                    <!-- END OF MEAL ITEM-->
                 </div><!-- END OF ID MEAL-->
             </div><!-- END OF MEAL-RESULT-->
+            <div class="meal-details">
+                <!-- RECIPE CLOSE BTN -->
+                <button type="button" class="btn recipe-close-btn" id="recipe-close-btn"><i class="fas fa-times"></i></button>
+                <!-- MEAL CONTENT -->
+                <div class="meal-details-content">
+                    <h2 class="recipe-title">Meals Name Here</h2>
+                    <p class="recipe-category">Category Name</p>
+                    <div class="recipe-instruct">
+                        <h3>Instructions:</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque expedita eos eaque incidunt nam hic repellat doloribus est quas corrupti ducimus molestiae possimus similique vel optio, earum tempora nostrum voluptatum?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet cupiditate, voluptates quibusdam eveniet ullam dignissimos a sit dolorem libero aliquid?</p>
+                    </div>
+                    <div class="recipe-meal-img">
+                        <img src="img/food.jpg" alt=""
+                    </div>
+                    <div class="recipe-link">
+                        <a href="#" target="_blank">Watch Video</a>
+                    </div>
+                </div>
+            </div>
         </div><!-- END OF MEAL-WRAPPER-->
     </div><!-- END OF CONTAINER -->
     <script src="script.js"></script>
