--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 </div><!-- END OF MEAL-SEARCH-BOX-->
             </div><!-- END OF MEAL-SEARCH-->
             <div class="meal-result">
-                <h2 class="title"> Your Search Rsults:</h2>
+                <h2 class="title"> Your Search Results:</h2>
                 <div id="meal">
                     <!-- meal-item-->
-                    <div class="meal-item">
+                    <!-- <div class="meal-item">
                         <div class="meal-img">
                             <img src="img/food.jpg" alt = "food">
                         </div>
@@ -32,7 +32,7 @@
                             <h3>Potato Chips</h3>
                             <a href ="#" class="recipe-btn">Get Recipe</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- END OF MEAL ITEM-->
                 </div><!-- END OF ID MEAL-->
             </div><!-- END OF MEAL-RESULT-->
