--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="meal-wrapper">
             <div class ="meal-search">
                 <h2 class = "title">Find Meals For Your Ingredients</h2>
-                <blockquote>Real food doesn't have ingredients, real food is ingredients. <br><cite>- Jamie Oliver</cite></blockquote>
+                <blockquote>“When you cook under pressure, you trade perfection.” <br><cite>- Gordon Ramsay</cite></blockquote>
 
                 <div class="meal-search-box">
                     <input type="text" class ="search-control" placeholder="Enter an ingredient" id="search-input">
@@ -41,7 +41,7 @@
                 <button type="button" class="btn recipe-close-btn" id="recipe-close-btn"><i class="fas fa-times"></i></button>
                 <!-- MEAL CONTENT -->
                 <div class="meal-details-content">
-                    <h2 class="recipe-title">Meals Name Here</h2>
+                    <!-- <h2 class="recipe-title">Meals Name Here</h2>
                     <p class="recipe-category">Category Name</p>
                     <div class="recipe-instruct">
                         <h3>Instructions:</h3>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="recipe-link">
                         <a href="#" target="_blank">Watch Video</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div><!-- END OF MEAL-WRAPPER-->
